@@ -34,6 +34,7 @@ const (
 	Index            Operation = iota
 	Vindex           Operation = iota
 	Stats            Operation = iota
+	HashGet        Operation = iota
 )
 
 // Option bit mask in request.
